--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Baloo+2&display=swap");
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif; */
+  font-family: "Baloo 2", cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -62,7 +64,7 @@ main {
 }
 
 #today-report-icon {
-  width: 8vw;
+  width: 7.5vw;
 }
 
 /* daily-report */
@@ -74,6 +76,12 @@ main {
 
 #daily-report-icon {
   width: 4vw;
+  height: 4vh;
+}
+
+.daily-sunrise-sunset {
+  margin-top: 3px;
+  margin-bottom: 3px;
 }
 
 /* hourly-report */
@@ -87,6 +95,12 @@ main {
   width: 7vw;
 }
 
+#hourly-report-wrapper p {
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
 #hourly-report-icon {
-  width: 2.5vw;
+  width: 2.2vw;
+  height: 3vh;
 }
